# AC_One

./: .gitignore  .gitmodules  CLAUDE.md  README.md  analyze_dataset.py
00-sh/ROS2/AC_one/: 01make.sh  03collect.sh
ARX_CAN/: can.sh
ARX_VR_SDK/ROS2/install/: local_setup.sh  setup.sh
ARX_VR_SDK/ROS2/install/arm_control/share/arm_control/: local_setup.sh  package.sh
ARX_VR_SDK/ROS2/install/serial_port/share/serial_port/: package.bash  package.zsh
ROS2/X5_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/X5_ws/install/arm_control/share/arm_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ROS2/X5_ws/install/arx5_arm_msg/share/arx5_arm_msg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ROS2/X5_ws/install/arx_x5_controller/lib/arx_x5_controller/: KeyBoard  X5Controller
ROS2/X5_ws/pico_xr_node.log/: log_tempadd.txt
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/: CMakeLists.txt  x5_2025.urdf
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/include/: utils_logger.hpp
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/include/arx_x5_controller/: X5Controller.hpp  utils.hpp
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/launch/x5_v2/: v2_joint_control.launch.py
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/src/: X5Controller.cpp  utils.cpp  utils_common.cpp
ROS2/X5_ws/src/arxmsgros2/arm_control/: CMakeLists.txt  package.xml
ROS2/X5_ws/src/pico_xr_teleop/: CMakeLists.txt  package.xml
ROS2/X5_ws/src/pico_xr_teleop/include/: PXREARobotSDK.h  utils_logger.hpp
ROS2/X5_ws/src/pico_xr_teleop/launch/: pico_xr_teleop.launch.py
ROS2/X5_ws/src/pico_xr_teleop/scripts/: check_connection.py  quick_check.sh
ROS2/X5_ws/src/pico_xr_teleop/src/: pico_xr_node.cpp  utils_common.cpp
ROS2/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/install/arm_control/share/arm_control/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
ROS2/install/arx5_arm_msg/share/arx5_arm_msg/: local_setup.dsv  local_setup.sh  package.sh
ROS2/install/arx_x5_controller/lib/arx_x5_controller/: KeyBoard  X5Controller
ROS2/install/arx_x5_controller/share/arx_x5_controller/: local_setup.sh  package.sh
act/: INFERENCE_ACTION_PROCESSING.md  collect.py  inference.md  inference.py  inference_old.py  replay.py  robot_utils.py  test_cuda.py  test_inference_init_positions.py  test_init_robot_debug.py  test_msg_import.py  test_rclpy.py  test_safety_protection.py  test_voice.py  train.py  visualize.py
act/data/: config.yaml
act/msg/3.11/arm_control-0.0.1-py3.11.egg-info/: PKG-INFO
act/msg/3.11/arm_control/msg/: _arx_imu.py  _joint_control.py
act/msg/3.11/arx5_arm_msg/: __init__.py  _arx5_arm_msg_s.ep.rosidl_typesupport_c.c  _arx5_arm_msg_s.ep.rosidl_typesupport_fastrtps_c.c
act/msg/3.11/arx5_arm_msg-0.0.0-py3.11.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
act/msg/3.11/arx5_arm_msg/msg/: __init__.py  _robot_cmd.py  _robot_status_s.c
act/utils/: ros_operator.py  utils.py
arx_joy/install/: local_setup.sh  setup.sh
arx_joy/install/arx_joy/lib/arx_joy/: arx_joy
arx_joy/install/arx_joy/share/arx_joy/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
arx_joy/src/arx_joy/src/: arx_joy.cpp
py/arx_x5_python/: MOTION_IMPROVEMENTS.md  README_eef_pos_optimized.md  SAFETY_GUIDE.md  joint_catch_test.py  test_dual_arm.py  test_dual_arm_eef_pos_optimized.py  test_dual_grav_comp.py  test_keyboard.py  test_single_arm.py
py/arx_x5_python/bimanual/: __init__.py
py/arx_x5_python/bimanual/script/: dual_arm.py  single_arm.py
realsense/: realsense.sh
tools/: 00_control_fixed.sh  00_eef_control_optimized.sh  00_joint_control_optimized.sh  01_collect.sh  01_collect_fixed.sh  01_collect_optimized.sh  02_train.sh  03_inference.sh  03_inference_fixed.sh
tools/IL/: 01_install_miniconda.sh.x  02_config_conda_mirror.sh.x  03_install_act_env.sh.x  04_install_act_pip.sh.x  conda_environment.yaml  requirements.txt
tools/ros_openpi/: 00_eef_control_ros_openpi.sh  00_joint_control_ros_openpi.sh  01_collect_ros_openpi.sh  02_train_ros_openpi.sh  03_inference_ros_openpi.sh  README.md  build_ros_openpi.sh
(+216 files in other folders)
